# SpBench

./: CMakeLists.txt
data/: config.txt  targets_all.txt
src/: suitesparse_add.cpp  suitesparse_msbfs.cpp
